--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -6,3 +6,5 @@
 /doxygen/html
 /doxygen/xml
 /sphinx/_toc.yml
+understand/user-kernel-space-compat-matrix-content.rst
+understand/algorithm-libraries-support-matrix-content.rst
