--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -17,6 +17,7 @@ subtrees:
   entries:
   - file: understand/programming_model
   - file: understand/programming_model_reference
+  - file: understand/programming_interface
   - file: understand/hardware_implementation
   - file: understand/amd_clr
 
