move texture fetching docs to conceptual

--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -19,6 +19,8 @@ subtrees:
   - file: understand/programming_model_reference
   - file: understand/hardware_implementation
   - file: understand/amd_clr
+  - file: understand/texture_fetching
+    title: Texture Fetching
 
 - caption: How to
   entries:
