--- a/docs/sphinx/_toc.yml.in
+++ b/docs/sphinx/_toc.yml.in
@@ -20,6 +20,7 @@ subtrees:
 - caption: Conceptual
   entries:
   - file: understand/programming_model
+  - file: understand/programming_model_reference
   - file: understand/hardware_implementation
   - file: understand/amd_clr
 
